[gd_scene load_steps=4 format=3 uid="uid://dp6m078b6k8j1"]

[ext_resource type="Script" path="res://scripts/core/PlanningMode.gd" id="1_plan"]
[ext_resource type="Script" path="res://scripts/planning/PlanningManager.gd" id="2_pm"]
[ext_resource type="PackedScene" uid="uid://recording_hud_v3" path="res://scenes/ui/RecordingHUD.tscn" id="3_hud"]
[ext_resource type="Shader" path="res://assets/materials/blueprint_overlay.gdshader" id="4_shader"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_blueprint"]
shader = ExtResource("4_shader")
shader_parameter/background_color = Color(0.043, 0.102, 0.165, 1)
shader_parameter/line_color = Color(0, 0.4, 1, 0.15)
shader_parameter/grid_size = 64.0
shader_parameter/scanline_count = 360.0
shader_parameter/vignette_intensity = 0.4
shader_parameter/aberration_amount = 0.002

[node name="PlanningMode" type="Node2D"]
script = ExtResource("1_plan")

[node name="PlanningManager" type="Node" parent="."]
script = ExtResource("2_pm")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BlueprintOverlay" type="ColorRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_blueprint")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="RecordingHUD" parent="CanvasLayer" instance=ExtResource("3_hud")]

[node name="BlueprintView" type="Node2D" parent="."]
# Placeholder for building map